--- a/config/crd/bases/probe.mikebz.com_checks.yaml
+++ b/config/crd/bases/probe.mikebz.com_checks.yaml
@@ -38,14 +38,14 @@ spec:
             type: object
           spec:
             description: CheckSpec defines the desired state of Check
-            properties:
-              foo:
-                description: Foo is an example field of Check. Edit check_types.go
-                  to remove/update
-                type: string
             type: object
           status:
             description: CheckStatus defines the observed state of Check
+            properties:
+              enabled:
+                type: boolean
+              total:
+                type: integer
             type: object
         type: object
     served: true
